--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8",
     "otp-generator": "^4.0.1",
     "socket.io": "^4.7.3",
+    "ws": "^8.16.0",
     "xss-clean": "^0.1.4"
   }
 }
