--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sendgrid/mail": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -28,8 +27,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8",
     "otp-generator": "^4.0.1",
+    "shortid": "^2.2.16",
     "socket.io": "^4.7.3",
-    "ws": "^8.16.0",
+    "socketio-jwt": "^4.6.2",
     "xss-clean": "^0.1.4"
   }
 }
